<resources>
    <string name="app_name">Knight Hacks</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="schedule_card_title">Schedule</string>
    <string name="live_updates_card_title">Live Updates</string>
    <string name="faqs_card_title">FAQs</string>
    <string name="workshops_card_title">Workshops</string>
    <string name="sponsors_card_title">Sponsors</string>

    <string name="horizontal_card_sub_section_title">Section Title</string>

    <string name="vertical_card_image_dummy">https://user-images.githubusercontent.com/13206138/45260286-148a6e80-b3b1-11e8-9d14-8001a1b8333d.png</string>
    <string name="vertical_card_title_dummy">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="vertical_card_subtitle_dummy">Quisque a egestas orci.</string>
    <string name="vertical_card_details_dummy">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="horizontal_card_image_dummy">https://challengepost-s3-challengepost.netdna-ssl.com/photos/production/challenge_photos/000/542/472/datas/full_width.png</string>
    <string name="horizontal_card_title_dummy">Title</string>
    <string name="horizontal_card_side_subtitle_dummy">City, State</string>
    <string name="horizontal_card_subtitle_dummy">Building</string>
    <string name="horizontal_card_first_text_tag_subtitle">Internships</string>
    <string name="horizontal_card_second_text_tag_subtitle">Full-time</string>
    <string name="horizontal_card_body_dummy">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque a egestas orci. Suspendisse molestie pulvinar sem, accumsan rhoncus nibh finibus vitae. In facilisis, odio id venenatis porttitor, nisi mi congue nulla, ac sodales neque mi eu nulla.</string>
    <string name="horizontal_card_timestamp_dummy">XX:XX</string>
    <string name="horizontal_card_footer_dummy">Footer</string>

    <string name="splash_screen_text">Contacting a galaxy far away&#8230;</string>
    <string name="title_activity_splash_screen">Knight Hacks</string>

    <string name="home_screen_schedule_card_img">https://user-images.githubusercontent.com/32247767/45531079-dfac5c00-b7a2-11e8-9a70-99590e0da00f.png</string>
    <string name="home_screen_live_updates_card_img">https://user-images.githubusercontent.com/32247767/45531076-df13c580-b7a2-11e8-8755-6687992d76fb.png</string>
    <string name="home_screen_faqs_card_img">https://user-images.githubusercontent.com/32247767/45531067-df13c580-b7a2-11e8-8f8d-6858e98c8a63.png</string>
    <string name="home_screen_workshops_card_img">https://user-images.githubusercontent.com/32247767/45531089-e044f280-b7a2-11e8-8bf4-4c7684b185a9.png</string>
    <string name="home_screen_sponsors_card_img">https://user-images.githubusercontent.com/32247767/45531083-dfac5c00-b7a2-11e8-8413-b969cbcf94b3.png</string>
    <!-- TODO : Add profile image -->
    <string name="home_screen_profile_card_img"></string>

    <string name="default_notification_channel_id">Default</string>

    <!-- Profile Text -->
    <string name="qr_btn_text">Scan QR Code to Login</string>
    <string name="email_btn_text">Enter Email Code to Login</string>
    <string name="notif_settings_btn_text">My Notification Settings</string>
    <string name="closeMapBtnText">CLOSE</string>
    <string name="logout_btn_txt">Logout</string>
    <string name="show_qr_code">Show my QR Code</string>
    <string name="my_group">My Group</string>
    <string name="username_txt">Username</string>
    <string name="points_txt">100 Points</string>
    <string name="email_login_txt">Enter Email Code</string>

    <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
    <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
    <string name="pref_key_front_camera_preview_size" translatable="false">fcpvs</string>
    <string name="pref_key_front_camera_picture_size" translatable="false">fcpts</string>
    <string name="pref_key_live_preview_object_detector_enable_multiple_objects" translatable="false">lpodemo</string>
    <string name="pref_key_still_image_object_detector_enable_multiple_objects" translatable="false">siodemo</string>
    <string name="pref_key_live_preview_object_detector_enable_classification" translatable="false">lpodec</string>
    <string name="pref_key_still_image_object_detector_enable_classification" translatable="false">siodec</string>
    <string name="prompt_searching">Searching&#8230;</string>

    <!-- Strings for barcode detection settings. -->
    <string name="pref_category_barcode_detection">Barcode detection</string>
    <string name="pref_key_barcode_reticle_width" translatable="false">barcode_brw</string>
    <string name="pref_title_barcode_reticle_width">Barcode reticle width</string>
    <string name="pref_summary_barcode_reticle_width" formatted="false">Relative to the camera view width, ranges from 50% to 95%</string>
    <string name="pref_key_barcode_reticle_height" translatable="false">barcode_brh</string>
    <string name="pref_title_barcode_reticle_height">Barcode reticle height</string>
    <string name="pref_summary_barcode_reticle_height" formatted="false">Relative to the camera view height, ranges from 20% to 80%</string>
    <string name="pref_key_enable_barcode_size_check" translatable="false">barcode_ebsc</string>
    <string name="pref_title_enable_barcode_size_check">Enable barcode size check</string>
    <string name="pref_summary_enable_barcode_size_check">Will prompt user to move camera closer if the detected barcode is too small</string>
    <string name="pref_key_minimum_barcode_width" translatable="false">barcode_mbw</string>
    <string name="pref_title_minimum_barcode_width">Minimum barcode width</string>
    <string name="pref_summary_minimum_barcode_width" formatted="false">Relative to the reticle width, ranges from 20% to 80% (only applicable when barcode size check enabled)</string>
    <string name="pref_key_delay_loading_barcode_result" translatable="false">barcode_dlbr</string>
    <string name="pref_title_delay_loading_barcode_result">Delay loading barcode result</string>
    <string name="pref_summary_delay_loading_barcode_result">Will show the loading spinner for 2s</string>

    <string name="pref_entries_automl_models_local">Local</string>
    <string name="pref_key_camera_live_viewport" translatable="false">clv</string>
    <string name="prompt_point_at_a_barcode">Point your camera at a barcode</string>
    <string name="prompt_move_camera_closer">Move closer to search</string>

</resources>
